# wallet_standard

./: Cargo.toml  devenv.nix  dprint.json  knope.toml  readme.md  rust-toolchain.toml
.cargo/: config.toml
.changeset/: improve_docs.md  remove_unused_dependency_derive_more.md  upgrade_from_version_2_of_the_solana_toolchain_to_version_3.md  use_solana_transaction_error_to_prevent_private_usage_of_enum.md
.config/: nextest.toml
.github/workflows/: ci.yml  publish.yml
crates/wallet_standard/: Cargo.toml  changelog.md  readme.md
crates/wallet_standard/src/: error.rs  lib.rs  types.rs
crates/wallet_standard/src/solana/: mod.rs  sign_and_send_transaction.rs  sign_in.rs  sign_message.rs  sign_transaction.rs  types.rs
crates/wallet_standard/src/standard/: connect.rs  disconnect.rs
crates/wallet_standard_browser/: Cargo.toml  changelog.md  readme.md
crates/wallet_standard_browser/src/: browser_wallet_info.rs  types.rs
crates/wallet_standard_browser/src/features/solana/: extras.rs  sign_and_send_transaction.rs  sign_in.rs  sign_message.rs  sign_transaction.rs
crates/wallet_standard_browser/tests/: wallet_standard_tests.rs
