[workspace]
members = ["crates/wallet_standard", "crates/wallet_standard_browser"]
resolver = "2"

[workspace.package]
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2024"
homepage = "https://github.com/ifiokjr/wallet_standard"
license = "Unlicense"
repository = "https://github.com/ifiokjr/wallet_standard"
rust-version = "1.85.0"

[workspace.dependencies]
async-trait = { default-features = false, version = "^0.1" }
bincode = { default-features = false, version = "^1" }
futures = { default-features = false, version = "^0.3" }
insta = { default-features = false, version = "^1" }
js-sys = { default-features = false, version = "^0.3" }
log = { default-features = false, version = "^0.4" }
serde = { default-features = false, version = "^1" }
serde-wasm-bindgen = { default-features = false, version = "^0.6" }
serde_bytes = { default-features = false, version = "^0.11" }
solana-commitment-config = { default-features = false, features = ["serde"], version = "^3" }
solana-keypair = { default-features = false, version = "^3" }
solana-message = { default-features = false, features = ["bincode", "serde"], version = "^3" }
solana-program-error = { default-features = false, features = ["borsh", "serde"], version = "^3" }
solana-pubkey = { default-features = false, features = ["bytemuck", "borsh", "serde"], version = "^3" }
solana-signature = { default-features = false, features = ["bytemuck", "serde", "verify"], version = "^3" }
solana-signer = { default-features = false, version = "^3" }
solana-system-interface = { default-features = false, features = ["bincode", "serde"], version = "^2" }
solana-transaction = { default-features = false, features = ["bincode", "serde"], version = "^3" }
solana-transaction-error = { default-features = false, features = ["serde"], version = "^3" }
thiserror = { default-features = false, version = "^2" }
tokio = { default-features = false, version = "^1" }
typed-builder = { default-features = false, version = "^0.22" }
wasm-bindgen = { default-features = false, version = "^0.2" }
wasm-bindgen-futures = { default-features = false, version = "^0.4" }
wasm-bindgen-test = { default-features = false, version = "^0.3" }
web-sys = { default-features = false, version = "^0.3" }

# publishable crates
wallet_standard = { path = "./crates/wallet_standard", version = "0.4.4" }
wallet_standard_browser = { path = "./crates/wallet_standard_browser", version = "0.4.4" }

[workspace.metadata.bin]
cargo-dylint = { version = "5.0.0" }
cargo-binstall = { version = "1.15.10" }
cargo-llvm-cov = { version = "0.6.19" }
cargo-nextest = { version = "0.9.111" }
cargo-semver-checks = { version = "0.44.0" }
dylint-link = { version = "5.0.0", bins = ["dylint-link"] }
knope = { version = "0.21.5", bins = ["knope"] }
release-plz = { version = "0.3.147", bins = ["release-plz"] }
wait-for-them = { version = "0.5.1", bins = ["wait-for-them"] }
wasm-bindgen-cli = { version = "0.2.104", bins = ["wasm-bindgen", "wasm-bindgen-test-runner"] }

[workspace.lints.rust]
# Group lints
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

# Individual lints
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
edition_2024_expr_fragment_specifier = "allow"

[workspace.lints.clippy]
# Group lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Individual lints
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
